--- a/src/components/TaskPage/styles/taskrecurrentattribute.scss
+++ b/src/components/TaskPage/styles/taskrecurrentattribute.scss
@@ -1,6 +1,8 @@
 @import 'styles/constants.scss';
 
 .task-recurrent-attribute {
+    max-width: 400px;
+    min-width: 400px;
     .log {
         display: flex;
         justify-content: space-between;
